crates/codegen/language/tests/src/fail/references/disabled_too_late/test.stderr
error: Parent scope is only enabled in '2.0.0..3.0.0'.
  --> src/fail/references/disabled_too_late/test.rs:28:81
   |
28 |                         (field_1 = Optional(kind = Terminal([Three]), enabled = Till("4.0.0")))
   |                                                                                 ^^^^
